# life-calendar

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.toml  devenv.nix  flake.nix
assets/: template.md
src/: calendar.cpp  calendar.hpp  config.cpp  config.hpp  diary.cpp  diary.hpp  main.cpp
